create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1823,7 +1823,55 @@ body {
 }
 .cid-ryCBVnshbk .mbr-text,
 .cid-ryCBVnshbk .mbr-section-btn {
-  color: #ff3366;
+  color: #f20a0a;
+}
+.cid-rFxFX2uGuy {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-rFxFX2uGuy .mbr-section-subtitle {
+  color: #767676;
+  text-align: center;
+  font-weight: 300;
+}
+.cid-rFxFX2uGuy .step {
+  width: 72px;
+  height: 72px;
+  font-size: 36px;
+  border-radius: 50%;
+  border: 2px solid #ff7f9f;
+  padding-bottom: 0;
+}
+@media (min-width: 768px) {
+  .cid-rFxFX2uGuy .separline .step-wrapper {
+    position: relative;
+  }
+  .cid-rFxFX2uGuy .separline .step-wrapper:before,
+  .cid-rFxFX2uGuy .separline .step-wrapper:after {
+    top: 38px;
+    position: absolute;
+    content: "";
+    height: 2px;
+    width: calc(50% + 15px - 36px - 8px);
+    background-color: #ff7f9f;
+  }
+  .cid-rFxFX2uGuy .separline .step-wrapper:before {
+    left: -15px;
+  }
+  .cid-rFxFX2uGuy .separline .step-wrapper:after {
+    left: calc(50% + 8px + 36px);
+  }
+  .cid-rFxFX2uGuy .separline.last-child .step-wrapper:after,
+  .cid-rFxFX2uGuy .separline:nth-child(3n) .step-wrapper:after,
+  .cid-rFxFX2uGuy .separline:nth-child(3n+1) .step-wrapper:before {
+    background: none;
+  }
+}
+@media (max-width: 767px) {
+  .cid-rFxFX2uGuy .card:not(.last-child) {
+    padding-bottom: 1.5rem;
+  }
 }
 .cid-rzQ1EyHIkP {
   padding-top: 90px;
